<resources>
    <string name="app_name">CalendarThai</string>
    <string name="app_version">1</string>
    <string name="code_version">1.1</string>
    <string name="database_version">1</string>

    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>

    <string name="done">ตกลง</string>
    <string name="settings">ตั้งค่า</string>

    <string name="title_show_txt_wax">แสดงข้างขึ้นข้างแรม</string>
    <string name="summary_show_txt_wax">แสดงข้างขึ้นข้างแรม</string>

    <string name="title_show_wanpra">แสดงวันพระ</string>
    <string name="summary_show_wanpra">แสดงวันพระ</string>

    <string name="title_txt_wax_color">สีข้างขึ้นข้างแรม</string>
    <string name="summary_txt_wax_color">สีข้างขึ้นข้างแรม</string>

    <string name="title_background_color">สีพื้นหลัง</string>
    <string name="summary_background_color">สีพื้นหลัง</string>

    <string name="title_to_month_color">สีวัน</string>
    <string name="summary_to_month_color">สีวัน</string>

    <string name="title_to_day_color">สีวันนี้</string>
    <string name="summary_to_day_color">สีวันนี้</string>

    <string name="title_to_day_background_color">สีพื้นหลังวันนี้</string>
    <string name="summary_to_day_background_color">สีพื้นหลังวันนี้</string>

    <string name="title_show_txt_holiday">แสดงข้อความวันหยุด</string>
    <string name="summary_show_txt_holiday">แสดงข้อความวันหยุด</string>

    <string name="title_txt_color_holiday">สีข้อความวันหยุด</string>
    <string name="summary_txt_color_holiday">สีแสดงข้อความวันหยุด</string>

    <string name="title_show_color_holiday">แสดงสีวันหยุด</string>
    <string name="summary_show_color_holiday">แสดงสีวันหยุด</string>

    <string name="title_color_holiday">สีวันหยุด</string>
    <string name="summary_color_holidayr">สีวันหยุด</string>

    <string name="title_show_other_month">แสดงวันเดือนอื่น</string>
    <string name="summary_show_other_month">แสดงวันเดือนอื่น</string>

    <string name="title_other_month_color">สีวันเดือนอื่น</string>
    <string name="summary_other_month_color">สีวันเดือนอื่น</string>

    <string name="about_settings">About this app</string>
    <string name="title_version">Version</string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
</resources>
