<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings">
        <CheckBoxPreference
            android:key="show_wanpra"
            android:title="@string/title_show_wanpra"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="show_txt_wax"
            android:title="@string/title_show_txt_wax"
            android:defaultValue="true"/>
        <com.oleeb.calendarthai.colorpicker.ColorPickerPreference
            android:key="background_color"
            android:title="@string/title_background_color"
            android:defaultValue="@integer/COLOR_BACKGROUND_CALENDAR"
            alphaSlider="true" />
        <com.oleeb.calendarthai.colorpicker.ColorPickerPreference
            android:key="to_month_color"
            android:title="@string/title_to_month_color"
            android:defaultValue="@integer/COLOR_DAY_IN_MONTH"
            alphaSlider="true" />
        <com.oleeb.calendarthai.colorpicker.ColorPickerPreference
            android:key="to_day_color"
            android:title="@string/title_to_day_color"
            android:defaultValue="@integer/COLOR_TO_DAY"
            alphaSlider="true" />
        <com.oleeb.calendarthai.colorpicker.ColorPickerPreference
            android:key="to_day_backuground_color"
            android:title="@string/title_to_day_background_color"
            android:defaultValue="@integer/COLOR_TO_DAY_BACKGROUND"
            alphaSlider="true" />
        <com.oleeb.calendarthai.colorpicker.ColorPickerPreference
            android:key="holiday_color"
            android:title="@string/title_color_holiday"
            android:defaultValue="@integer/COLOR_DAY_IN_HOLIDAY"
            alphaSlider="true" />
        <CheckBoxPreference
            android:key="show_txt_holiday"
            android:title="@string/title_show_txt_holiday"
            android:defaultValue="true"/>
        <com.oleeb.calendarthai.colorpicker.ColorPickerPreference
            android:key="txt_holiday_color"
            android:title="@string/title_txt_color_holiday"
            android:defaultValue="@integer/COLOR_TXT_IN_HOLIDAY"
            alphaSlider="true" />
        <com.oleeb.calendarthai.colorpicker.ColorPickerPreference
            android:key="other_month_color"
            android:title="@string/title_other_month_color"
            android:defaultValue="@integer/COLOR_DAY_OTHER_MONTH"
            alphaSlider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_settings">
        <Preference
            android:title="@string/title_version"
            android:summary="@string/app_version" />
    </PreferenceCategory>
</PreferenceScreen>