<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_material_light"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/launcher"
            style="?android:borderlessButtonStyle"
            android:layout_width="56sp"
            android:layout_height="match_parent"
            android:contentDescription="@string/next_month"
            android:src="@drawable/ic_launcher" />

        <ImageButton
            android:id="@+id/title_bar"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:fontFamily="sans-serif"
            android:gravity="left"
            android:textColor="#0000"
            android:textStyle="bold"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/btn_settings"
            style="?android:borderlessButtonStyle"
            android:layout_width="56sp"
            android:layout_height="match_parent"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings" />
    </LinearLayout>
</LinearLayout >